--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <h2 class="presenter-name">Amit Nandy</h2>
                     <p class="presenter-title">Product Manager at Amazon</p>
                     <div class="presenter-bio">
-                        <p>I have over 24 years of work experience, including over a decade (10+ Years) in Amazon as a product manager. I hold a post graduate degree in business administration including a certificate in software development from the University of Oregon.   </p>
+                        <p>Amit has over 24 years of work experience, including over a decade (10+ years) at Amazon as a product manager. He holds a bachelor's degree and a postgraduate degree in business administration, as well as a certificate in software development from the University of Oregon.  </p>
                     </div>
                 </div>
             </div>
